--- a/index.html
+++ b/index.html
@@ -2,9 +2,27 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Nerds</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a>
+        <img src="logo.jpeg" alt="Nerds">
+        </a>
+      <ul>
+        <li><a href="studio.html">Студия</a></li>
+        <li><a href="clients.html">Клиенты</a></li>
+        <li><a href="magazine.html">Магазин</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+      </ul>
+      <ul>
+        <li><a href="basket.html">Корзина</a></li>
+      </ul>
+      </nav>
+      <b>Долго, дорого, скрупулезно.</b>
+      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+      <>
+    </header>
   </body>
-  </html>
-  
+</html>
