--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Nerds</title>
+    <title>Дизайн-Студия Nerds</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <a>
-        <img src="logo.jpeg" alt="Nerds">
+    <header class="main-header">
+      <nav class="main-navigation">
+        <a class="main-header-logo">
+        <img src="img/index-logo.svg" alt="Nerds">
         </a>
-      <ul>
+      <ul class="site-navigation">
         <li><a href="studio.html">Студия</a></li>
         <li><a href="clients.html">Клиенты</a></li>
         <li><a href="magazine.html">Магазин</a></li>
@@ -22,7 +22,33 @@
       </nav>
       <b>Долго, дорого, скрупулезно.</b>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-      <>
+      <a class="button" href="more-info.html">узнать больше</a>
     </header>
+    <main class="container">
+      <h1 class="visually-hidden">Дизайн-Студия Nerds</h1>
+      <section class="services">
+        <h2 class="visually-hidden">Услуги</h2>
+        <ul class="services-list">
+          <li class="services-item">
+            <h3>Веб-сайты</h3>
+            <p>Мир никогда не будет прежним</br>
+              после того, как увидит ваш сайт!</p>
+            <a class="button" href="order.html">Заказать</a>
+          </li>
+          <li class="services-item">
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в</br>
+               AppStore и Google Play</p>
+            <a class="button" href="apps.html">Заказать</a>
+          </li>
+          <li class="services-item">
+            <h3>Презентации</h3>
+            <p>Вы даже не подозреваете,</br>
+               насколько вы изумительны!</p>
+            <a class="button" href="presentation.html">Заказать</a>
+          </li>
+        </ul>
+      </section>
+    </main>
   </body>
 </html>
