--- a/index.html
+++ b/index.html
@@ -49,6 +49,61 @@
           </li>
         </ul>
       </section>
+      <section>
+        <h3>Мы - маленькая, но гордая</br>
+          дизайн-студия из Краснодара.</h3>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет</br>
+            превыше креатива. Работаем не покладая рук, как роботы.</p>
+        <h4>Выполняем заказы на разработку</h4>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для IOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        <img src="img/nerds.svg" alt="Nerds">
+        <h4>С 2004 года любим точность во всем:</h4>
+        <ul>
+          <li>
+            <h3>146%</h3>
+            <p>Уровень самоотдачи</p>
+          </li>
+          <li>
+            <h3>100%</h3>
+            <p>Соблюдение сроков</p>
+          </li>
+          <li>
+            <h3>50%</h3>
+            <p>Минимальная предоплата</p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li><a href="#">Html-academy</a></li>
+          <li><a href="#">Borodinsky</a></li>
+          <li><a href="#">Pink</a></li>
+          <li><a href="#">Mishka</a></li>
+        </ul>
+      </section>
     </main>
+    <footer class="main-footer">
+      <img src="img/map.svg" alt="Map">
+      <p class="footer-contacts">
+        <b>NЁRDS DESIGN STUDIO</b>
+        191186, Санкт-Петербург,</br>
+        ул. Б. Конюшенная, д. 19/8</br>
+        тел. +7(812)275-75-75
+      </p>
+      <a class="button" href="contact.html">Напишите нам</a>
+    <div class="footer-social">
+    <ul>
+      <li><a class="social-button" href="#">Вконтакте</a></li>
+      <li><a class="social-button" href="#">Facebook</a></li>
+      <li><a class="social-button" href="#">Instagram</a></li>
+    </ul>
+    <b>Давайте дружить, это выгодно!</b>
+    <p>Скидка 10% для друзей из социальный сетей.</p>
+    </div>
+  </footer>
   </body>
 </html>
