--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-        <img src="img/index-logo.svg" alt="Nerds">
+        <img src="img/index-logo.svg" alt=Логотип дизайн-студии "Nerds">
         </a>
       <ul class="site-navigation">
         <li><a href="studio.html">Студия</a></li>
@@ -17,7 +17,7 @@
         <li><a href="contacts.html">Контакты</a></li>
       </ul>
       <ul>
-        <li><a href="basket.html">Корзина</a></li>
+        <li><a class="basket" href="basket.html">Корзина</a></li>
       </ul>
       </nav>
       <b>Долго, дорого, скрупулезно.</b>
@@ -49,13 +49,13 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h3>Мы - маленькая, но гордая</br>
-          дизайн-студия из Краснодара.</h3>
+      <section class="features">
+        <b>Мы - маленькая, но гордая</br>
+          дизайн-студия из Краснодара.</b>
           <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет</br>
             превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h4>Выполняем заказы на разработку</h4>
-        <ul>
+        <ul class="feauture-list">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для IOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -77,8 +77,8 @@
           </li>
         </ul>
       </section>
-      <section>
-        <ul>
+      <section class="partners">
+        <ul class="partners-list">
           <li><a href="#">Html-academy</a></li>
           <li><a href="#">Borodinsky</a></li>
           <li><a href="#">Pink</a></li>
@@ -89,7 +89,7 @@
     <footer class="main-footer">
       <img src="img/map.svg" alt="Map">
       <p class="footer-contacts">
-        <b>NЁRDS DESIGN STUDIO</b>
+        <h3>NЁRDS DESIGN STUDIO</h3>
         191186, Санкт-Петербург,</br>
         ул. Б. Конюшенная, д. 19/8</br>
         тел. +7(812)275-75-75
