--- a/index.html
+++ b/index.html
@@ -31,28 +31,28 @@
         <ul class="services-list">
           <li class="services-item">
             <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним</br>
+            <p>Мир никогда не будет прежним<br>
               после того, как увидит ваш сайт!</p>
             <a class="button" href="order.html">Заказать</a>
           </li>
           <li class="services-item">
             <h3>Приложения</h3>
-            <p>Покорите топ-10 приложений в</br>
+            <p>Покорите топ-10 приложений в<br>
                AppStore и Google Play</p>
             <a class="button" href="apps.html">Заказать</a>
           </li>
           <li class="services-item">
             <h3>Презентации</h3>
-            <p>Вы даже не подозреваете,</br>
+            <p>Вы даже не подозреваете,<br>
                насколько вы изумительны!</p>
             <a class="button" href="presentation.html">Заказать</a>
           </li>
         </ul>
       </section>
       <section class="features">
-        <b>Мы - маленькая, но гордая</br>
+        <b>Мы - маленькая, но гордая<br>
           дизайн-студия из Краснодара.</b>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет</br>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
             превыше креатива. Работаем не покладая рук, как роботы.</p>
         <h4>Выполняем заказы на разработку</h4>
         <ul class="feauture-list">
@@ -87,11 +87,11 @@
       </section>
     </main>
     <footer class="main-footer">
-      <img src="img/map.svg" alt="Map">
+      <img src="img/map.svg" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
       <p class="footer-contacts">
         <h3>NЁRDS DESIGN STUDIO</h3>
-        191186, Санкт-Петербург,</br>
-        ул. Б. Конюшенная, д. 19/8</br>
+        191186, Санкт-Петербург,<br>
+        ул. Б. Конюшенная, д. 19/8<br>
         тел. +7(812)275-75-75
       </p>
       <a class="button" href="contact.html">Напишите нам</a>
