--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo">
-        <img src="img/index-logo.svg" alt=Логотип дизайн-студии "Nerds">
+        <img src="img/index-logo.svg" width="" height="" alt=Логотип дизайн-студии "Nerds">
         </a>
+      <div class="main-navigation-site">
       <ul class="site-navigation">
         <li><a href="studio.html">Студия</a></li>
         <li><a href="clients.html">Клиенты</a></li>
@@ -19,6 +20,7 @@
       <ul>
         <li><a class="basket" href="basket.html">Корзина</a></li>
       </ul>
+      </div>
       </nav>
       <b>Долго, дорого, скрупулезно.</b>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
@@ -62,20 +64,18 @@
         </ul>
         <img src="img/nerds.svg" alt="Nerds">
         <h4>С 2004 года любим точность во всем:</h4>
-        <ul>
-          <li>
-            <h3>146%</h3>
-            <p>Уровень самоотдачи</p>
-          </li>
-          <li>
-            <h3>100%</h3>
-            <p>Соблюдение сроков</p>
-          </li>
-          <li>
-            <h3>50%</h3>
-            <p>Минимальная предоплата</p>
-          </li>
-        </ul>
+        <table>
+            <tr>
+              <th>146%</th>
+              <th>100%</th>
+              <th>50%</th>
+            </tr>
+            <tr>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>  
+        </table>
       </section>
       <section class="partners">
         <ul class="partners-list">
