--- a/catalog.html
+++ b/catalog.html
@@ -27,21 +27,20 @@
         <div class="cost">
         <input type="range" min="0" max="100">
         <form class="filter">
-        <fieldset>
         <p><label>от</label><input type="number"><label>до</label><input type="number"></p>
-        </fieldset>
+        </form>
         </div>
-        <fieldset>
-          <legend>сетка</legend>
+        <section class="grid">
+        <h3>Сетка</h3>
         <ul>
         <li><input type="radio">Адаптивная</li>
         <li><input type="radio">Фиксированная</li>
         <li><input type="radio">Резиновая</li>
         </fieldset>
+        </section>
         </form>
         <form>
-          <fieldset>
-          <legend>Особенности</legend>
+          <h3>Особенности</h3>
         <ul>
         <li><input type="checkbox" name="product-group">Слайдер</li>
         <li><input type="checkbox" name="product-group">Блок преимуществ</li>
@@ -49,7 +48,6 @@
         <li><input type="checkbox" name="product-group">Галерея</li>
         <li><input type="checkbox" name="product-group">Корзина</li>
         </ul>
-        </fieldset>
         <button type="submit">Показать</button>
         </form>
       <section>
