--- a/catalog.html
+++ b/catalog.html
@@ -27,7 +27,14 @@
         <div class="cost">
         <input type="range" min="0" max="100">
         <form class="filter">
-        <p><label>от</label><input type="number"><label>до</label><input type="number"></p>
+        <p>
+          <label for="from">от</label>
+          <input id="from" type="number"placeholder="0">
+        </p>
+        <p>
+          <label from="to">до</label>
+          <input id="to" type="number" placeholder="15000">
+        </p>
         </form>
         </div>
         <section class="grid">
