--- a/catalog.html
+++ b/catalog.html
@@ -23,26 +23,26 @@
       <b>Магазин готовых шаблонов</b>
     </header>
     <main>
+        <section class="cost">
         <h3>стоимость</h3>
-        <div class="cost">
         <input type="range" min="0" max="100">
         <form class="filter">
         <p>
           <label for="from">от</label>
-          <input id="from" type="number"placeholder="0">
+          <input id="from" type="number" placeholder="0">
         </p>
         <p>
           <label from="to">до</label>
           <input id="to" type="number" placeholder="15000">
         </p>
         </form>
-        </div>
+        </section>
         <section class="grid">
         <h3>Сетка</h3>
-        <ul>
-        <li><input type="radio">Адаптивная</li>
-        <li><input type="radio">Фиксированная</li>
-        <li><input type="radio">Резиновая</li>
+        <form class="grid">
+        <p><input type="radio">Адаптивная</p>
+        <p><input type="radio">Фиксированная</p>
+        <p><input type="radio">Резиновая</p>
         </fieldset>
         </section>
         </form>
