--- a/catalog.html
+++ b/catalog.html
@@ -1,32 +1,38 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Дизайн-Студия Nerds</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
-        <img src="img/index-logo.svg" alt=Логотип дизайн-студии "Nerds">
-        </a>
-      <ul class="site-navigation">
-        <li><a href="studio.html">Студия</a></li>
-        <li><a href="clients.html">Клиенты</a></li>
-        <li><a href="magazine.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul>
-        <li><a class="basket" href="basket.html">Корзина</a></li>
-      </ul>
-      </nav>
-      <b>Магазин готовых шаблонов</b>
-    </header>
-    <main>
-        <section class="cost">
+<head>
+  <meta charset="utf-8">
+  <title>Дизайн-Студия Nerds</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
+        <img src="img/index-logo.svg" width="" height="" alt=Логотип дизайн-студии "Nerds">
+      </a>
+      <div class="main-navigation-site">
+        <ul class="site-navigation">
+          <li><a href="studio.html">Студия</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="magazine.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a class="basket" href="basket.html">Корзина</a></li>
+        </ul>
+      </div>
+    </nav>
+    <div class="represent">
+      <b>Долго, дорого, скрупулезно.</b>
+      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+      <a class="button" href="more-info.html">узнать больше</a>
+    </div>
+  </header>
+  <main class="container">
+    <section class="catalog">
+      <form class="catalog">
         <h3>стоимость</h3>
         <input type="range" min="0" max="100">
-        <form class="filter">
         <p>
           <label for="from">от</label>
           <input id="from" type="number" placeholder="0">
@@ -35,69 +41,66 @@
           <label from="to">до</label>
           <input id="to" type="number" placeholder="15000">
         </p>
-        </form>
-        </section>
-        <section class="grid">
         <h3>Сетка</h3>
-        <form class="grid">
         <p><input type="radio">Адаптивная</p>
         <p><input type="radio">Фиксированная</p>
         <p><input type="radio">Резиновая</p>
-        </fieldset>
-        </section>
-        </form>
-        <form>
-          <h3>Особенности</h3>
+        <h3>Особенности</h3>
         <ul>
-        <li><input type="checkbox" name="product-group">Слайдер</li>
-        <li><input type="checkbox" name="product-group">Блок преимуществ</li>
-        <li><input type="checkbox" name="product-group">Новости</li>
-        <li><input type="checkbox" name="product-group">Галерея</li>
-        <li><input type="checkbox" name="product-group">Корзина</li>
+          <li><input type="checkbox" name="product-group">Слайдер</li>
+          <li><input type="checkbox" name="product-group">Блок преимуществ</li>
+          <li><input type="checkbox" name="product-group">Новости</li>
+          <li><input type="checkbox" name="product-group">Галерея</li>
+          <li><input type="checkbox" name="product-group">Корзина</li>
         </ul>
         <button type="submit">Показать</button>
-        </form>
-      <section>
-        <ul>
-        <li>Сортировать</li>
+      </form>
+    </section>
+    <section class="nav-catalog">
+      <ul class="sort">
+        <li>Сортировать:</li>
         <li>По цене</li>
         <li>По типу</li>
         <li>По названию</li>
-        </ul>
-        <ul>
-          <li><a href="#">Sedona</a></li>
-          <li><a href="#">Pink</a></li>
-          <li><a href="#">Borodinsky</a></li>
-          <li><a href="#">Mishka</a></li>
-          <li><a href="#">Обучение</a></li>
-          <li><a href="#">Kvast</a></li>
-        </ul>
-      </section>
-      <ul>
-        <li><a href="#">1</a></li>
-        <li><a href="#">2</a></li>
-        <li><a href="#">3</a></li>
-        <li><a href="#">Следующая</a></li>
+        <li>убывание</li>
+        <li>возрастание</li>
       </ul>
-    </main>
-    <footer class="main-footer">
-      <img src="img/map.svg" alt="Map">
+      <ul>
+        <li><a href="#">Sedona</a></li>
+        <li><a href="#">Pink</a></li>
+        <li><a href="#">Borodinsky</a></li>
+        <li><a href="#">Mishka</a></li>
+        <li><a href="#">Обучение</a></li>
+        <li><a href="#">Kvast</a></li>
+      </ul>
+    </section>
+    <ul>
+      <li><a href="#">1</a></li>
+      <li><a href="#">2</a></li>
+      <li><a href="#">3</a></li>
+      <li><a href="#">Следующая</a></li>
+    </ul>
+  </main>
+  <footer class="main-footer">
+    <section class="contacts">
+      <img src="img/map.svg" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
       <p class="footer-contacts">
         <h3>NЁRDS DESIGN STUDIO</h3>
         191186, Санкт-Петербург,<br>
         ул. Б. Конюшенная, д. 19/8<br>
         тел. +7(812)275-75-75
-      <p>
+      </p>
       <a class="button" href="contact.html">Напишите нам</a>
-    <div class="footer-social">
-    <ul>
-      <li><a class="social-button" href="#">Вконтакте</a></li>
-      <li><a class="social-button" href="#">Facebook</a></li>
-      <li><a class="social-button" href="#">Instagram</a></li>
-    </ul>
-    <b>Давайте дружить, это выгодно!</b>
-    <p>Скидка 10% для друзей из социальный сетей.</p>
-    </div>
-    </footer>
-    </body>
-    </html>
+    </section>
+    <section class="footer-social">
+      <ul>
+        <li><a class="social-button" href="#">Вконтакте</a></li>
+        <li><a class="social-button" href="#">Facebook</a></li>
+        <li><a class="social-button" href="#">Instagram</a></li>
+      </ul>
+      <b>Давайте дружить, это выгодно!</b>
+      <p>Скидка 10% для друзей из социальный сетей.</p>
+    </section>
+  </footer>
+</body>
+</html>
