--- a/index.html
+++ b/index.html
@@ -1,109 +1,117 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="utf-8">
-    <title>Дизайн-Студия Nerds</title>
-  </head>
-  <body>
-    <header class="main-header">
-      <nav class="main-navigation">
-        <a class="main-header-logo">
+<head>
+  <meta charset="utf-8">
+  <title>Дизайн-Студия Nerds</title>
+</head>
+<body>
+  <header class="main-header">
+    <nav class="main-navigation">
+      <a class="main-header-logo">
         <img src="img/index-logo.svg" width="" height="" alt=Логотип дизайн-студии "Nerds">
-        </a>
+      </a>
       <div class="main-navigation-site">
-      <ul class="site-navigation">
-        <li><a href="studio.html">Студия</a></li>
-        <li><a href="clients.html">Клиенты</a></li>
-        <li><a href="magazine.html">Магазин</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-      </ul>
-      <ul>
-        <li><a class="basket" href="basket.html">Корзина</a></li>
-      </ul>
+        <ul class="site-navigation">
+          <li><a href="studio.html">Студия</a></li>
+          <li><a href="clients.html">Клиенты</a></li>
+          <li><a href="magazine.html">Магазин</a></li>
+          <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <ul>
+          <li><a class="basket" href="basket.html">Корзина</a></li>
+        </ul>
       </div>
-      </nav>
+    </nav>
+    <div class="represent">
       <b>Долго, дорого, скрупулезно.</b>
       <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
       <a class="button" href="more-info.html">узнать больше</a>
-    </header>
-    <main class="container">
-      <h1 class="visually-hidden">Дизайн-Студия Nerds</h1>
-      <section class="services">
-        <h2 class="visually-hidden">Услуги</h2>
-        <ul class="services-list">
-          <li class="services-item">
-            <h3>Веб-сайты</h3>
-            <p>Мир никогда не будет прежним<br>
-              после того, как увидит ваш сайт!</p>
+    </div>
+  </header>
+  <main class="container">
+    <h1 class="visually-hidden">Дизайн-Студия Nerds</h1>
+    <section class="services">
+      <h2 class="visually-hidden">Услуги</h2>
+      <ul class="services-list">
+        <li class="services-item">
+          <h3>Веб-сайты</h3>
+          <p>Мир никогда не будет прежним<br>
+            после того, как увидит ваш сайт!</p>
             <a class="button" href="order.html">Заказать</a>
           </li>
           <li class="services-item">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в<br>
-               AppStore и Google Play</p>
-            <a class="button" href="apps.html">Заказать</a>
-          </li>
-          <li class="services-item">
-            <h3>Презентации</h3>
-            <p>Вы даже не подозреваете,<br>
-               насколько вы изумительны!</p>
-            <a class="button" href="presentation.html">Заказать</a>
-          </li>
-        </ul>
-      </section>
-      <section class="features">
-        <b>Мы - маленькая, но гордая<br>
-          дизайн-студия из Краснодара.</b>
-          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
-            превыше креатива. Работаем не покладая рук, как роботы.</p>
-        <h4>Выполняем заказы на разработку</h4>
-        <ul class="feauture-list">
-          <li>Веб-сайтов любой сложности</li>
-          <li>Мобильных приложений для IOS и Android</li>
-          <li>Слайдшоу и видео для корпоративных презентаций</li>
-        </ul>
-        <img src="img/nerds.svg" alt="Nerds">
-        <h4>С 2004 года любим точность во всем:</h4>
-        <table>
-            <tr>
-              <th>146%</th>
-              <th>100%</th>
-              <th>50%</th>
-            </tr>
-            <tr>
-              <td>Уровень самоотдачи</td>
-              <td>Соблюдение сроков</td>
-              <td>Минимальная предоплата</td>
-            </tr>  
-        </table>
-      </section>
-      <section class="partners">
-        <ul class="partners-list">
-          <li><a href="#">Html-academy</a></li>
-          <li><a href="#">Borodinsky</a></li>
-          <li><a href="#">Pink</a></li>
-          <li><a href="#">Mishka</a></li>
-        </ul>
-      </section>
-    </main>
-    <footer class="main-footer">
-      <img src="img/map.svg" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
-      <p class="footer-contacts">
-        <h3>NЁRDS DESIGN STUDIO</h3>
-        191186, Санкт-Петербург,<br>
-        ул. Б. Конюшенная, д. 19/8<br>
-        тел. +7(812)275-75-75
-      </p>
-      <a class="button" href="contact.html">Напишите нам</a>
-    <div class="footer-social">
-    <ul>
-      <li><a class="social-button" href="#">Вконтакте</a></li>
-      <li><a class="social-button" href="#">Facebook</a></li>
-      <li><a class="social-button" href="#">Instagram</a></li>
-    </ul>
-    <b>Давайте дружить, это выгодно!</b>
-    <p>Скидка 10% для друзей из социальный сетей.</p>
-    </div>
-  </footer>
-  </body>
-</html>
+              AppStore и Google Play</p>
+              <a class="button" href="apps.html">Заказать</a>
+            </li>
+            <li class="services-item">
+              <h3>Презентации</h3>
+              <p>Вы даже не подозреваете,<br>
+                насколько вы изумительны!</p>
+                <a class="button" href="presentation.html">Заказать</a>
+              </li>
+            </ul>
+          </section>
+          <section class="features">
+            <b>Мы - маленькая, но гордая<br>
+              дизайн-студия из Краснодара.</b>
+              <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+                превыше креатива. Работаем не покладая рук, как роботы.</p>
+                <h4>Выполняем заказы на разработку</h4>
+                <ul class="feauture-list">
+                  <li>Веб-сайтов любой сложности</li>
+                  <li>Мобильных приложений для IOS и Android</li>
+                  <li>Слайдшоу и видео для корпоративных презентаций</li>
+                </ul>
+              </section>
+              <section class="statistic">
+                <img src="img/nerds.svg" alt="Nerds">
+                <h4>С 2004 года любим точность во всем:</h4>
+                <ul>
+                  <li>
+                    <h3>146%</h3>
+                    <p>Уровень самоотдачи</p>
+                  </li>
+                  <li>
+                    <h3>100%</h3>
+                    <p>Соблюдение сроков</p>
+                  </li>
+                  <li>
+                    <h3>50%</h3>
+                    <p>Минимальная предоплата</p>
+                  </li>
+                </ul>
+              </section>
+              <section class="partners">
+                <ul class="partners-list">
+                  <li><a href="#">Html-academy</a></li>
+                  <li><a href="#">Borodinsky</a></li>
+                  <li><a href="#">Pink</a></li>
+                  <li><a href="#">Mishka</a></li>
+                </ul>
+              </section>
+            </main>
+            <footer class="main-footer">
+              <section class="contacts">
+                <img src="img/map.svg" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
+                <p class="footer-contacts">
+                  <h3>NЁRDS DESIGN STUDIO</h3>
+                  191186, Санкт-Петербург,<br>
+                  ул. Б. Конюшенная, д. 19/8<br>
+                  тел. +7(812)275-75-75
+                </p>
+                <a class="button" href="contact.html">Напишите нам</a>
+              </section>
+              <section class="footer-social">
+                <ul>
+                  <li><a class="social-button" href="#">Вконтакте</a></li>
+                  <li><a class="social-button" href="#">Facebook</a></li>
+                  <li><a class="social-button" href="#">Instagram</a></li>
+                </ul>
+                <b>Давайте дружить, это выгодно!</b>
+                <p>Скидка 10% для друзей из социальный сетей.</p>
+              </section>
+            </footer>
+          </body>
+          </html>
