--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="" height="" alt=Логотип дизайн-студии "Nerds">
+        <img src="img/nerds-main-logo.svg" width="160" height="65" alt=Логотип дизайн-студии "Nerds">
       </a>
       <div class="main-navigation-site">
         <ul class="site-navigation">
