--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
+          <img src="img/services-item.jpg" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br>
             после того, как увидит ваш сайт!</p>
