--- a/catalog.html
+++ b/catalog.html
@@ -8,7 +8,7 @@
   <header class="main-header">
     <nav class="main-navigation">
       <a class="main-header-logo">
-        <img src="img/index-logo.svg" width="" height="" alt=Логотип дизайн-студии "Nerds">
+        <img src="img/nerds-main-logo.svg" width="160" height="65" alt=Логотип дизайн-студии "Nerds">
       </a>
       <div class="main-navigation-site">
         <ul class="site-navigation">
@@ -22,11 +22,7 @@
         </ul>
       </div>
     </nav>
-    <div class="represent">
-      <b>Долго, дорого, скрупулезно.</b>
-      <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-      <a class="button" href="more-info.html">узнать больше</a>
-    </div>
+    <h2>Магазин готовых шаблонов</h2>
   </header>
   <main class="container">
     <section class="catalog">
@@ -66,12 +62,12 @@
         <li>возрастание</li>
       </ul>
       <ul>
-        <li><a href="#">Sedona</a></li>
-        <li><a href="#">Pink</a></li>
-        <li><a href="#">Borodinsky</a></li>
-        <li><a href="#">Mishka</a></li>
-        <li><a href="#">Обучение</a></li>
-        <li><a href="#">Kvast</a></li>
+        <li><a href="#"><img src="img/sedona.jpg" width="360" height="576" alt="Sedona"></a></li>
+        <li><a href="#"><img src="img/pink.jpg" width="360" height="576" alt="Pink"></a></li>
+        <li><a href="#"><img src="img/barbershop.jpg" width="360" height="576" alt="Barbershop"></a></li>
+        <li><a href="#"><img src="img/mishka.jpg" width="360" height="576" alt="Mishka"></a></li>
+        <li><a href="#"><img src="img/alpus.jpg" width="360" height="576" alt="Alpus"></a></li>
+        <li><a href="#"><img src="img/kvast.jpg" width="360" height="576" alt="Kvast"></a></li>
       </ul>
     </section>
     <ul>
