--- a/index.html
+++ b/index.html
@@ -31,22 +31,24 @@
   <main class="container">
     <h1 class="visually-hidden">Дизайн-Студия Nerds</h1>
     <section class="services">
-      <img src="img/services-item.jpg" width="300" height="146" alt="Веб-сайты">
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
+          <img src="img/services-item.jpg" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br>
             после того, как увидит ваш сайт!</p>
             <a class="button" href="order.html">Заказать</a>
           </li>
           <li class="services-item">
+            <img src="img/services-item-2.jpg" width="300" height="146" alt="Веб-сайты">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в<br>
               AppStore и Google Play</p>
               <a class="button" href="apps.html">Заказать</a>
             </li>
             <li class="services-item">
+              <img src="img/services-item-3.jpg" width="300" height="146" alt="Веб-сайты">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете,<br>
                 насколько вы изумительны!</p>
@@ -67,7 +69,7 @@
                 </ul>
               </section>
               <section class="statistic">
-                <img src="img/nerds.svg" alt="Nerds">
+                <img src="img/nerds-logo.jpg" width="360" height="208" alt="Nerds">
                 <h4>С 2004 года любим точность во всем:</h4>
                 <ul>
                   <li>
@@ -86,16 +88,16 @@
               </section>
               <section class="partners">
                 <ul class="partners-list">
-                  <li><a href="#">Html-academy</a></li>
-                  <li><a href="#">Borodinsky</a></li>
-                  <li><a href="#">Pink</a></li>
-                  <li><a href="#">Mishka</a></li>
+                  <li><a href="#" Html-academy><img src="img/html-academy.png" width="199" height="68" alt="Html-academy"></a></li>
+                  <li><a href="#" Borodinsky><img src="img/Borodinsky.png" width="209" height="87" alt="Borodinsky"></a></li>
+                  <li><a href="#" Pink><img src="img/pink.png" width="185" height="52" alt="Pink"></a></li>
+                  <li><a href="#" Mishka><img src="img/mishka.png" width="173" height="84" alt="Mishka"></a></li>
                 </ul>
               </section>
             </main>
             <footer class="main-footer">
               <section class="contacts">
-                <img src="img/map.svg" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
+                <img src="map.svg" width="" height="" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
                 <p class="footer-contacts">
                   <h3>NЁRDS DESIGN STUDIO</h3>
                   191186, Санкт-Петербург,<br>
