--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </main>
             <footer class="main-footer">
               <section class="contacts">
-                <img src="map.svg" width="" height="" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
+                <img src="img/map.jpg" width="1440" height="416" alt="Офис компании по адресу ул. Большая Конюшенная, д. 19/8">
                 <p class="footer-contacts">
                   <h3>NЁRDS DESIGN STUDIO</h3>
                   191186, Санкт-Петербург,<br>
@@ -108,9 +108,9 @@
               </section>
               <section class="footer-social">
                 <ul>
-                  <li><a class="social-button" href="#">Вконтакте</a></li>
-                  <li><a class="social-button" href="#">Facebook</a></li>
-                  <li><a class="social-button" href="#">Instagram</a></li>
+                  <li><a class="social-button" href="#"><img src="vk-icon.svg" width="26" height="15" alt="Вконтакте"></a></li>
+                  <li><a class="social-button" href="#"><img src="fb-icon.svg" width="26" height="15" alt="Фейсбук"></a></li>
+                  <li><a class="social-button" href="#"><img src="insta-icon.svg" width="26" height="15" alt="Инстаграм"></a></li>
                 </ul>
                 <b>Давайте дружить, это выгодно!</b>
                 <p>Скидка 10% для друзей из социальный сетей.</p>
