--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
       <h2 class="visually-hidden">Услуги</h2>
       <ul class="services-list">
         <li class="services-item">
-          <img src="img/services-item.jpg" width="300" height="146" alt="Веб-сайты">
+          <img src="img/services-item-web.jpg" width="300" height="146" alt="Веб-сайты">
           <h3>Веб-сайты</h3>
           <p>Мир никогда не будет прежним<br>
             после того, как увидит ваш сайт!</p>
             <a class="button" href="order.html">Заказать</a>
           </li>
           <li class="services-item">
-            <img src="img/services-item-2.jpg" width="300" height="146" alt="Веб-сайты">
+            <img src="img/services-item-apps.jpg" width="300" height="146" alt="Приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в<br>
               AppStore и Google Play</p>
               <a class="button" href="apps.html">Заказать</a>
             </li>
             <li class="services-item">
-              <img src="img/services-item-3.jpg" width="300" height="146" alt="Веб-сайты">
+              <img src="img/services-item-presentations.jpg" width="300" height="146" alt="Презентации">
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете,<br>
                 насколько вы изумительны!</p>
@@ -108,9 +108,9 @@
               </section>
               <section class="footer-social">
                 <ul>
-                  <li><a class="social-button" href="#"><img src="vk-icon.svg" width="26" height="15" alt="Вконтакте"></a></li>
-                  <li><a class="social-button" href="#"><img src="fb-icon.svg" width="26" height="15" alt="Фейсбук"></a></li>
-                  <li><a class="social-button" href="#"><img src="insta-icon.svg" width="26" height="15" alt="Инстаграм"></a></li>
+                  <li><a class="social-button" href="#"><img src="img/vk-icon.jpg" width="79" height="79" alt="Вконтакте"></a></li>
+                  <li><a class="social-button" href="#"><img src="img/fb-icon.jpg" width="79" height="79" alt="Фейсбук"></a></li>
+                  <li><a class="social-button" href="#"><img src="img/insta-icon.jpg" width="79" height="79" alt="Инстаграм"></a></li>
                 </ul>
                 <b>Давайте дружить, это выгодно!</b>
                 <p>Скидка 10% для друзей из социальный сетей.</p>
